--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
